--- a/app/components/infographic/weapons.partial.html
+++ b/app/components/infographic/weapons.partial.html
@@ -132,7 +132,11 @@
             </h3>
           </div>
           <div class="col-xs-12 col-sm-10">
-            <canvas width="300" id="weaponTypeChart">
+            <!-- <canvas width="300" id="weaponTypeChart"> -->
+            <canvas id="pie" class="chart chart-pie"
+              chart-data="dataWeapons" chart-labels="labelsWeapons" chart-options="optionsWeapons"
+              chart-dataset-override="datasetsWeapons">
+            </canvas> 
           </div>
         </div>
         <div class="row">
