update heroes section

--- a/app/components/infographic/heroes.partial.html
+++ b/app/components/infographic/heroes.partial.html
@@ -14,11 +14,11 @@
             </h3>
           </div>
           <div class="col-xs-12 col-sm-10">
-            <strong><big><a ng-href="https://my.trials.report/xbox/Kira86m" target="_blank">...</a></big></strong>
+            <strong><big><a ng-href="https://my.trials.report/xbox/Smoke 420 x" target="_blank">Smoke 420 x</a></big></strong>
             <p>visited the Lighthouse the most often, <strong>120 times</strong> in total to be precise. That's <strong>5 times per week</strong> on average.
           </div>
         </div>
-        <hr>
+<!--         <hr>
         <div class="row">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
@@ -29,7 +29,7 @@
             <strong><big><a ng-href="https://my.trials.report/xbox/Marruk" target="_blank">...</a></big></strong>
             <p>died a <strong>10 times</strong> during one round. There must be some strong medics on that team.</p>
           </div>
-        </div>
+        </div> -->
         <hr class="hr">
         <div class="row">
           <div class="col-xs-12 col-sm-2">
@@ -38,8 +38,8 @@
             </h3>
           </div>
           <div class="col-xs-12 col-sm-10">
-            <strong><big><a ng-href="https://my.trials.report/xbox/Marruk" target="_blank">...</a></big></strong>
-            <p>was the Guardian that doesn't need a Sniper or Shotgun, making <strong>1,221</strong> kills with a Sidearm.</p>
+            <strong><big><a ng-href="https://my.trials.report/ps/Brenni007" target="_blank">Brenni007</a></big></strong>
+            <p>was the Guardian that doesn't need a Sniper or Shotgun, making <strong>14,560</strong> kills with a Sidearm.</p>
           </div>
         </div>
         <hr class="hr">
