fix icons and default chart source

--- a/app/components/infographic/weapons.partial.html
+++ b/app/components/infographic/weapons.partial.html
@@ -358,7 +358,7 @@
               </div>
               <div class="col-xs-12 col-sm-4 stat first-in-lighthouse__players">
                 <span class="first-in-lighthouse__rank first-in-lighthouse__rank--second infographic-weapon-leaderboard">
-                  <img class="last-match-weapon__img img-responsive" ng-src="https://www.bungie.net/common/destiny_content/icons/5548e41157368a6bb78efff0e0f47428.jpg">
+                  <img class="last-match-weapon__img img-responsive" ng-src="https://www.bungie.net/common/destiny_content/icons/da228eb46b3cd8d215e78605a4f7a946.jpg" style="margin: -.1em auto 0 auto;height: 2.6em;width: 2.6em;z-index: -1;border-radius: 1.5em">
                 </span>
                 <span class="first-in-lighthouse__player infographic-weapon-leaderboard">
                   Häkke Test-A
@@ -370,7 +370,7 @@
               </div>
               <div class="col-xs-12 col-sm-4 stat first-in-lighthouse__players">
                 <span class="first-in-lighthouse__rank first-in-lighthouse__rank--third infographic-weapon-leaderboard">
-                  <img class="last-match-weapon__img img-responsive" ng-src="https://www.bungie.net/common/destiny_content/icons/f0fa414ee9b1a1b81b2cc913ad504c06.jpg">
+                  <img class="last-match-weapon__img img-responsive" ng-src="https://www.bungie.net/common/destiny_content/icons/03222b32781bc37f97148e1e97599c59.jpg" style="margin: 0 auto 0 auto;height: 2.2em;width: 2.2em;z-index: -.05;border-radius: 1em">
                 </span>
                 <span class="first-in-lighthouse__player infographic-weapon-leaderboard">
                   SUROS TSR-10
