Front-end for Twitch

--- a/app/assets/css/parts/_player.scss
+++ b/app/assets/css/parts/_player.scss
@@ -190,7 +190,7 @@
       border-bottom-left-radius: 1em;
     }
 
-    &:nth-child(2) {
+    &:last-child {
       border-bottom-right-radius: 1em;
     }
   }
