smaller manifests and moved maps into its own controller

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="home" ng-show="!fireteam[0] && !status">
-      <div ng-include="'components/home/blog.partial.html'" ng-if="!sdOpponents"></div>
+      <div ng-include="'components/maps/maps.html'" ng-if="!sdOpponents" ng-controller="mapsController"></div>
       <div ng-include="'components/home/opponents.partial.html'" ng-if="sdOpponents"></div>
     </div>
     <div class="players-wrapper" ng-if="fireteam[0] && !status" ng-class="{'focus-on-player-one':focusOnPlayer===1, 'focus-on-player-two':focusOnPlayer===2, 'focus-on-player-three':focusOnPlayer===3}">
