--- a/app/assets/css/elements/_popover.scss
+++ b/app/assets/css/elements/_popover.scss
@@ -74,6 +74,34 @@
   hr {
     margin: 10px;
   }
+
+  table {
+    margin-left: -15px;
+    margin-right: -15px;
+
+    th, td {
+      text-transform: uppercase;
+      font-weight: 300;
+      color: $main-dark;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
+    th, .lighthouse-year {
+      font-family: 'Roboto Condensed';
+      font-size: .9em;
+    }
+
+    .lighthouse-header {
+      border-bottom: 1px solid #e3e3e3;
+    }
+
+    td {
+      font-family: 'Roboto', sans-serif;
+      font-size: 1.2em;
+      text-align: center;
+    }
+  }
 }
 
 .popover-footer {
