translation for flawless popover, auto width, return to top-right placement

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -65,7 +65,7 @@
       </span>
       <label translate="ELO"></label>
     </div>
-    <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="left" bs-popover>
+    <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
       <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse.grimoire !== true">
         <i class="material-icons">&#xE14C;</i>
       </span>
