--- a/app/components/inventory/armor.template.html
+++ b/app/components/inventory/armor.template.html
@@ -39,7 +39,7 @@
         <span class="player-hazard player-hazard--none">Harmless artifact</span>
       </div>
       <div class="weapon__hazards">
-        <span class="player-hazard" ng-repeat="hazard in artifact.hazards" ng-bind="hazard"></span>
+        <span class="player-hazard" ng-repeat="hazard in artifact.hazards" translate="artifactHazards.{{hazard}}"></span>
       </div>
     </div>
   </div>
