Added three types of message

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -21,6 +21,7 @@
 @import 'elements/dropdown-menu';
 @import 'elements/block';
 @import 'elements/select';
+@import 'elements/message';
 
 // Main parts
 @import 'parts/controls';
