--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -76,26 +76,7 @@
     </div>
   </div>
 
-  <div class="message message--error" ng-if="false">
-    <p>Uh-oh.</p>
-    <div class="message__close">
-      <i class="material-icons">&#xE14C;</i>
-    </div>
-  </div>
-
-  <div class="message message--warning" ng-if="false">
-    <p>Oh no.</p>
-    <div class="message__close">
-      <i class="material-icons">&#xE14C;</i>
-    </div>
-  </div>
-
-  <div class="message message--info" ng-if="false">
-    <p>Yay!</p>
-    <div class="message__close">
-      <i class="material-icons">&#xE14C;</i>
-    </div>
-  </div>
+  <message message-id="4" message="'Uh-oh.'" message-type="'error'"></message>
 
   <div class="controls-map" ng-class="{'is-week-23': isPlaylist()}"
        ng-style="{'background-image': !isPlaylist() ? 'url(https://www.bungie.net/' + currentMap.pgcrImage + ')' : 'url(' + getPlaylistHeader() + ')'}">
