Message is hidden, made info the default message type

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -76,7 +76,7 @@
     </div>
   </div>
 
-  <message message-id="4" message="'Uh-oh.'" message-type="'error'"></message>
+  <message ng-if="false" message-id="1" message="'Hello!'" message-type="'error'"></message>
 
   <div class="controls-map" ng-class="{'is-week-23': isPlaylist()}"
        ng-style="{'background-image': !isPlaylist() ? 'url(https://www.bungie.net/' + currentMap.pgcrImage + ')' : 'url(' + getPlaylistHeader() + ')'}">
