angular components are the future, add dismissable attribute

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -76,7 +76,7 @@
     </div>
   </div>
 
-  <message ng-if="false" message-id="1" message="'Hello!'" message-type="'error'"></message>
+  <dtr-message ng-if="false" data-id="1" data-message=""></dtr-message>
 
   <div class="controls-map" ng-class="{'is-week-23': isPlaylist()}"
        ng-style="{'background-image': !isPlaylist() ? 'url(https://www.bungie.net/' + currentMap.pgcrImage + ')' : 'url(' + getPlaylistHeader() + ')'}">
