--- a/app/components/controls/message.template.html
+++ b/app/components/controls/message.template.html
@@ -1,6 +1,7 @@
-<div class="message" ng-class="{'message--error': messageType === 'error', 'message--warning': messageType === 'warning', 'message--info': messageType === 'info'}" ng-if="!isHidden">
-  <p ng-bind="message"></p>
-  <div class="message__close" ng-click="hideMessage()">
+<div ng-if="!$ctrl.hidden" class="message"
+     ng-class="{'message--error': $ctrl.type === 'error', 'message--warning': $ctrl.type === 'warning', 'message--info': $ctrl.type === 'info'}">
+  <p ng-bind="$ctrl.message"></p>
+  <div class="message__close" ng-if="$ctrl.dismissable" ng-click="$ctrl.dismissMessage()">
     <i class="material-icons">&#xE14C;</i>
   </div>
 </div>
