--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -25,12 +25,12 @@
       <div class="blog-post__content" ng-if="currentMapInfo">
         <div class="row">
           <div class="col-xs-6 col-md-3 stat">
-            <span ng-bind="currentMapInfo.lighthouse | number"></span>
-            <label>Flawless runs</label>
+            <span ng-bind="currentMapInfo.lighthouse_unique | number"></span>
+            <label>Accounts Flawless</label>
           </div>
           <div class="col-xs-6 col-md-3 stat">
             <span ng-bind="currentMapInfo.players | number"></span>
-            <label>Guardians participated</label>
+            <label>Accounts participated</label>
           </div>
           <div class="col-xs-6 col-md-3 stat">
             <span ng-bind="currentMapInfo.matches | number"></span>
@@ -51,14 +51,13 @@
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
           </div>
-          <div class="col-xs-12 col-sm-10" ng-if="currentMapInfo.week == 45">
-            <div class="first-in-lighthouse__undecided">
-              Temporarily disabled due to Bungie API issues.
-            </div>
-          </div>
+          <!--<div class="col-xs-12 col-sm-10">-->
+            <!--<div class="first-in-lighthouse__undecided">-->
+              <!--Temporarily disabled due to Bungie API issues.-->
+            <!--</div>-->
+          <!--</div>-->
           <div class="col-xs-12 col-sm-4" ng-repeat="(key, weapons) in weaponSummary track by $index"
-               ng-class="{'col-sm-offset-1': $index > 0}"
-               ng-if="currentMapInfo.week != 45">
+               ng-class="{'col-sm-offset-1': $index > 0}">
             <div class="top-weapons--map">
               <div class="row">
                 <div class="col-xs-6 col-sm-4">
