Implemented Challenge of the week on the front-end

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -40,6 +40,7 @@
 @import 'parts/first-in-lighthouse';
 @import 'parts/settings';
 @import 'parts/kd-graph';
+@import 'parts/challenge';
 
 // Player card
 @import 'parts/player';
