--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -42,6 +42,12 @@
   color: $success;
 }
 
+.player-hazard--challenger {
+  background: white;
+  text-shadow: none;
+  color: #00897B;
+}
+
 .player-hazard--charity1 {
   background: white;
   text-shadow: none;
