--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -113,3 +113,14 @@
     </span>
   </div>
 </div>
+
+<div class="let-it-snow" ng-click="$storage.letItSnow = !$storage.letItSnow">
+  <div class="let-it-snow__content">
+    <span>Let it snow!</span>
+  </div>
+  <span class="togglebutton">
+    <label>
+      <input type="checkbox" ng-model="$storage.letItSnow">
+    </label>
+  </span>
+</div>
