--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,4 +1,4 @@
-<div class="wrapper" ng-class="{'my-dtr':subdomain, 'focus-on-players':focusOnPlayers}">
+<div class="wrapper" ng-class="{'my-dtr':subdomain, 'focus-on-players':focusOnPlayers, 'yay-let-it-snow': $storage.letItSnow }">
   <div class="controls-wrapper shadow-z-2">
     <div class="controls" ng-controller="controlsController">
       <header ng-include="'components/controls/top.partial.html'"></header>
@@ -37,3 +37,50 @@
     <i class="material-icons">&#xE5CE;</i>
   </button>
 </div>
+<div id="snow"></div>
+<ul class="lightrope">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+
+<div id="xmas-tree"></div>
