--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         <hr>
-        <div class="row first-in-lighthouse" ng-if="currentMapInfo.week <= 51"> <!-- TODO: Change this to 54 -->
+        <div class="row first-in-lighthouse" ng-if="currentMapInfo.week <= 54"> <!-- TODO: Change this to 56 -->
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               First fireteams to reach the lighthouse
@@ -162,7 +162,7 @@
             <hr class="hr--minor visible-xs">
           </div>
         </div>
-        <div class="row first-in-lighthouse" ng-if="currentMapInfo.week >= 52"> <!-- TODO: Change this to 55 -->
+        <div class="row first-in-lighthouse" ng-if="currentMapInfo.week >= 55"> <!-- TODO: Change this to 57 -->
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               Challenge of the week
@@ -214,6 +214,44 @@
               <img ng-if="$parent.lb.platform === 2" src="assets/img/ps.svg" alt="PlayStation">
             </div>
             <hr class="hr--minor visible-xs">
+          </div>
+        </div>
+        <p>&nbsp;</p>
+        <div class="row" ng-if="challenges[currentMapInfo.week] && challenges[currentMapInfo.week].runningLeaderboard">
+          <div class="col-xs-12 col-sm-2">
+            <h3 class="stat-header faded">
+              Current leaderboard
+            </h3>
+          </div>
+          <div class="col-xs-12 col-sm-5">
+            <div class="leaderboard" ng-repeat="lb in challenges[currentMapInfo.week].runningLeaderboard | limitTo: 5">
+              <span class="leaderboard__rank" ng-class="{'first-in-lighthouse__rank': $index < 3, 'first-in-lighthouse__rank--second': $index === 1, 'first-in-lighthouse__rank--third': $index === 2}">
+                <span>#{{lb.rank}}</span>
+              </span>
+              <span class="leaderboard__player" ng-repeat="player in lb.players track by $index">
+                <a ng-href="https://my.trials.report/{{$parent.lb.platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
+                <img ng-if="$parent.lb.platform === 1" src="assets/img/xbox.svg" alt="Xbox">
+                <img ng-if="$parent.lb.platform === 2" src="assets/img/ps.svg" alt="PlayStation">
+              </span>
+              <span class="leaderboard__amount">
+                <span ng-bind="lb.amount | number"></span>
+              </span>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-5">
+            <div class="leaderboard" ng-repeat="lb in challenges[currentMapInfo.week].runningLeaderboard  | limitTo:5:5">
+              <span class="leaderboard__rank">
+                <span>#{{lb.rank}}</span>
+              </span>
+              <span class="leaderboard__player" ng-repeat="player in lb.players track by $index">
+                <a ng-href="https://my.trials.report/{{$parent.lb.platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
+                <img ng-if="$parent.lb.platform === 1" src="assets/img/xbox.svg" alt="Xbox">
+                <img ng-if="$parent.lb.platform === 2" src="assets/img/ps.svg" alt="PlayStation">
+              </span>
+              <span class="leaderboard__amount">
+                <span ng-bind="lb.amount | number"></span>
+              </span>
+            </div>
           </div>
         </div>
       </div>
