Better handling of badges, Joel has his own color now

--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -42,6 +42,12 @@
   color: $success;
 }
 
+.player-hazard--joel {
+  background: white;
+  text-shadow: none;
+  color: #4099FF;
+}
+
 .player-hazard--challenger {
   background: white;
   text-shadow: none;
